<resources>
    <string name="app_name">CSAI</string>
    <string name="csai_app">CSAI APP</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="logout">Logout</string>
    <string name="ChatRoom">ChatRoom</string>
    <string name="chatBot">Chat Bot</string>
    <string name="Quick">Quick Reply</string>
    <string name="home">Welcome To Home</string>
    <string name="panduan">Panduan Penggunaan</string>
    <string name="Contact">Contacts</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">SIGN IN</string>
    <string name="search">search…</string>
    <string name="CSAI">CSAI</string>
    <string name="logout2">Anda yakin ingin logout?</string>
    <string name="robot">robot</string>
    <string name="message">Type a Message…</string>
    <string name="signintext">Please sign-in to your account and start the adventure</string>
    <string name="welcome_to_csai">Welcome to csai!</string>
    <string name="welcome_csai">Selamat datang di CSAI, Platform Whatsapp Bisnis untuk membantu Anda menjalankan CRM Whatsapp dengan mudah dan simpel</string>
    <string name="paket">Paket</string>
    <string name="cs">Role Customer Service</string>
    <string name="statistik">Statistik</string>
    <string name="customer_service">Customer Service</string>
    <string name="perangkat">perangkat</string>
    <string name="PAKET">paket</string>
    <string name="kontak">Kontak</string>
    <string name="_0">0</string>
    <string name="loading">Loading…</string>
    <string name="select">All Contact</string>
    <string name="pesan">Kirim Pesan</string>
    <string name="login_sukses">Login Sukses</string>
    <string name="login_gagal">Login Gagal</string>
    <string name="gagal">GAGAL</string>
    <string name="ok">OK</string>
    <string name="sukses">SUKSES</string>
    <string name="logingagal">Login gagal, cek username dan password anda!</string>
    <string name="dashboards">Dashboards</string>
    <string name="chat">Chat</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="quick_reply">Quick Reply</string>
    <string name="contacts">Contacts</string>
    <string name="panduan_pengguna">Panduan Pengguna</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="audio">audio</string>
    <string name="file">File</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="emoji">emoji</string>
    <string name="imagechat">imagechat</string>
    <string name="profil">profil</string>
    <string name="copyright_2023">COPYRIGHT © 2023 CSAI TEAM</string>
    <string name="send_image">send image</string>
    <string name="type">TYPE</string>
    <string name="pesan2">PESAN</string>
    <string name="keyword">KEYWORD</string>
    <string name="view">View</string>
    <string name="form_chat_bot">Form Chat Bot</string>
    <string name="textchatbot">Chat Bot adalah fitur yang membantu anda untuk membalas pesan dari pelanggan secara otomatis dan aktif selama 24 jam dengan pemicu keyword tertentu. anda hanya perlu mengisi for...</string>
    <string name="keywordtext">Keyword</string>
    <string name="pesan1">Pesan</string>
    <string name="type1">Jenis</string>
    <string name="closechat">closeChat</string>
    <string name="kirim">kirim</string>
    <string name="add_quick_reply">Add Quick Reply</string>
    <string name="impor">Import</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_label">Add Label</string>
    <string name="add_label_contact">Add Label Contact</string>
    <string name="label_contact">Label Contact</string>
    <string name="submit">Submit</string>
    <string name="importr">Import</string>
    <string name="down">Download Example</string>
    <string name="details"><![CDATA[Details ->]]></string>
    <string name="textquick">Setiap Chat yang masuk akan di simpan data kontaknya secara otomatis, Anda juga dapat meng-inputkan data kontak yang sudah ke dalam CSAI serta dapat melakukan export data Kontak juga. Jumlah maksimal kontak yang dapat di simpan tergantung dari paket yang Anda pilih. Ketika jumlah kontak sudah mencapat limit dari total maksimal paket Anda, Chat tetap akan masuk akan tetapi tidak menyimpan data kontak dari Chat tersebut</string>
    <string name="label">Label</string>
    <string name="kirim_gambar">Kirim Gambar</string>
    <string name="kirim_video">Kirim Video</string>
    <string name="kirim_file">Kirim File</string>
    <string name="nomor_whatsapp">Nomor Whatsapp</string>
    <string name="ex_628212223242526">Ex 628212223242526</string>
    <string name="open_folder">Open Folder</string>
    <string name="member">member</string>
    <string name="pause">pause</string>
</resources>