<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuFile"
        android:icon="@drawable/baseline_insert_drive_file_24"
        android:title="@string/file"
        android:iconTint="@color/dashboard2"/>
    <item
        android:icon="@drawable/baseline_insert_photo_24"
        android:id="@+id/menuImage"
        android:title="@string/image"
        android:iconTint="#FFEB3B"/>
    <item
        android:icon="@drawable/baseline_video_library_24"
        android:id="@+id/menuVideo"
        android:title="@string/video"
        android:iconTint="#E91E63"
        />
    <item
        android:icon="@drawable/baseline_audio_file_24"
        android:id="@+id/menuAudio"
        android:iconTint="#9C27B0"
        android:title="@string/audio"/>
</menu>