<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardBackgroundColor="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp">
        <TextView
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importr"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textLabelAdd"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgclos"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_close_24"
            android:contentDescription="@string/add_label" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnChoseFile"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_100sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLabelAdd"
            android:hint="@string/label_contact"
            android:background="@drawable/card_edittext_login"
            android:layout_marginTop="@dimen/_15sdp"
            android:autofillHints="name" />
        <Button
            android:id="@+id/btnImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgclos"
            app:layout_constraintStart_toEndOf="@id/btnChoseFile"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_menu"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:padding="@dimen/_10sdp"/>

       <TextView
           android:id="@+id/textDownloadSample"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/down"
           android:textSize="@dimen/_13ssp"
           android:textStyle="bold|normal"
           android:textColor="@color/primary"
           android:layout_marginStart="@dimen/_10sdp"
           android:layout_marginTop="@dimen/_12sdp"
           android:layout_marginBottom="@dimen/_12sdp"
           app:layout_constraintTop_toBottomOf="@id/btnChoseFile"
           app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>