<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    app:cardBackgroundColor="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:padding="@dimen/_10sdp"
    android:layout_height="wrap_content">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_chat_bot"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textSize="@dimen/_15ssp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imCls"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_close_24"/>
</androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutChatbott">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardContent"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_10sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:background="@color/chatbot"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_marginTop="@dimen/_15sdp"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:id="@+id/textContent"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:textSize="@dimen/_10ssp"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textColor="@color/textchatbot"
                            android:text="@string/textquick"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details"
                            android:textColor="@color/textchatbot"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:layout_marginBottom="@dimen/_15sdp"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/label"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_spin"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/card_edittext_login"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/eLabel"
                app:layout_constraintStart_toStartOf="parent">
            <Spinner
                android:id="@+id/spn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_spinner"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/pesan1"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>
            <EditText
                android:drawablePadding="@dimen/_5sdp"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textPesan"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/card_edittext_login"/>
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/type1"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>
            <EditText
                android:drawablePadding="@dimen/_5sdp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/texttypee"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/card_edittext_login"/>
            <Button
                android:id="@+id/btnSendLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_gravity="center"
                android:background="@drawable/button_menu"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:padding="@dimen/_10sdp"/>


        </LinearLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>