<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardBackgroundColor="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_label_contact"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textLabelAdd"/>
        <ImageView
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageCloses"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_close_24"
            android:contentDescription="@string/add_label" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eLabel"
            android:padding="@dimen/_10sdp"
            android:inputType="text"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_100sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLabelAdd"
            android:hint="@string/label_contact"
            android:background="@drawable/card_edittext_login"
            android:layout_marginTop="@dimen/_15sdp"
            android:autofillHints="name" />
        <Button
            android:id="@+id/btnSendLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCloses"
            app:layout_constraintStart_toEndOf="@id/eLabel"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_menu"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:padding="@dimen/_10sdp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_spin"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/eLabel"
            app:layout_constraintStart_toStartOf="parent">
            <Spinner
                android:id="@+id/spn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="50dp"
                android:background="@drawable/style_spinner"/>
        </androidx.cardview.widget.CardView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eSearch"
            android:padding="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_120sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/label_contact"
            android:background="@drawable/card_edittext_login"
            app:layout_constraintTop_toBottomOf="@id/btnSendLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:autofillHints="name"
            android:inputType="text"
            android:drawableEnd="@drawable/baseline_search_24"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>