<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.activity.LoginActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_width="@dimen/_65sdp"
        android:id="@+id/robotbiru"
        android:src="@drawable/pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="@dimen/_65sdp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textwelcome"
        android:text="@string/welcome_to_csai"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_30ssp"
        android:layout_marginBottom="@dimen/_70sdp"
        app:layout_constraintBottom_toTopOf="@id/textUsername"
        app:layout_constraintTop_toBottomOf="@id/robotbiru"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textsigin"
        android:text="@string/signintext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_14ssp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/textUsername"
        app:layout_constraintTop_toBottomOf="@id/robotbiru"/>
<TextView
    android:id="@+id/usernme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/username"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textwelcome"
    app:layout_constraintBottom_toTopOf="@id/textUsername"
    android:layout_marginStart="@dimen/_20sdp"
    android:textSize="@dimen/_13ssp"
    android:layout_marginEnd="@dimen/_8sdp"/>
<EditText
    android:drawableStart="@drawable/baseline_person_24"
    android:drawablePadding="@dimen/_5sdp"
    android:inputType="text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/textUsername"
    app:layout_constraintTop_toBottomOf="@id/usernme"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:background="@drawable/card_edittext_login"/>
    <TextView
        android:id="@+id/pass"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUsername"
        android:layout_marginStart="@dimen/_20sdp"
        android:textSize="@dimen/_13ssp"
        android:layout_marginEnd="@dimen/_8sdp"/>
    <LinearLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/card_edittext_login"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25sdp"
                android:id="@+id/textPassword"
                android:background="@android:color/transparent"
                android:padding="@dimen/_10sdp"
                android:autofillHints="password"
                tools:ignore="LabelFor" />
            <ImageView
                android:id="@+id/eyeTogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/baseline_remove_red_eye_24"
                android:contentDescription="@string/impor" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/member"
        android:id="@+id/member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword"
        android:layout_marginStart="@dimen/_20sdp"
        android:textSize="@dimen/_13ssp"
        android:layout_marginEnd="@dimen/_8sdp"/>
    <EditText
        android:drawablePadding="@dimen/_5sdp"
        android:drawableStart="@drawable/baseline_business_24"
        android:inputType="number"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textMember"
        app:layout_constraintTop_toBottomOf="@id/member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/card_edittext_login"
        android:autofillHints="name"
        tools:ignore="LabelFor" />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        android:background="@drawable/button_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMember"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/btn_sukseslogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        android:visibility="gone"
        android:background="@drawable/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMember"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        />
    <ProgressBar
        android:id="@+id/pbLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMember"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:visibility="gone"
        android:layout_width="35dp"
        android:progressTint="@color/primary"
        android:layout_height="35dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>